# skaus

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skaus-validation-report.html  tsconfig.json
.github/workflows/: ci.yml
apps/dashboard/: next.config.js  package.json  railway.json  tailwind.config.ts  vercel.json
apps/gateway/: package.json  railway.json  tsconfig.json
apps/web/: next.config.js  package.json  (+1 more)
docs/: architecture.md  devnet-deployment.md  planA.md  planB.md  planC.md  planD.md  planE.md  plans.md
programs/name-registry/: Cargo.toml
programs/name-registry/src/: lib.rs
programs/name-registry/src/errors/: mod.rs
programs/name-registry/src/instructions/: admin.rs  create_deposit_path.rs  initialize_registry.rs  mod.rs  register_name.rs  rotate_keys.rs  update_profile.rs
programs/name-registry/src/state/: mod.rs
programs/name-registry/src/utils/: validation.rs
programs/stealth-pool/: Cargo.toml
programs/stealth-pool/src/: lib.rs
programs/stealth-pool/src/errors/: mod.rs
programs/stealth-pool/src/instructions/: admin.rs  deposit.rs  initialize.rs  withdraw.rs
programs/stealth-pool/src/state/: mod.rs
programs/stealth-pool/src/utils/: merkle.rs  mod.rs  verifier.rs  vk.rs
scripts/: deploy-devnet.sh  deploy-name-registry-devnet.sh  e2e-smoke.ts  init-circle-pool.ts  init-name-registry-devnet.ts  init-pool-devnet.ts  update-pool-config.ts
tests/: e2e-pipeline.ts  package.json  stealth-pool.ts  tsconfig.json
(+89 files in other folders)
