[package]
name = "name-registry"
version = "0.1.0"
description = "SKAUS Name Registry — human-readable identity layer for stealth payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "name_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
