[package]
name = "stealth-pool"
version = "0.1.0"
description = "SKAUS Stealth Pool — privacy-preserving deposit/withdraw with ZK verification on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stealth_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet-mock = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
groth16-solana = "0.1.0"
bytemuck = "1.14"
